===================
####Version 2.5.0:    
- <span class="fullname"> um den kompletten Namen ergänzt          
- Kurzbeschreibung bei Sidebar-Format über verknüpfte Kontakte gesetzt     
- Klassen ergänzt bei span1 (person-thumb), span3 mit Bild (person-default-thumb), span3 mit Mehrlink (person-default-more), span4 (person-default), span6 (person-compact-thumb), span7 (person-compact)    


####Version 2.4.0:    
- Korrektur Rollenrechte (Editor und Author)       
- Einbettung Größe der Personenbilder    
- Caption für Personenbilder     
- Shortcode in Widget ermöglicht        
- Schnittstelle zu rrze-gmail-Plugin         

####Version 2.3.1:    
- Bugfix Sprechzeiten 12:00 AM und 12:00 PM        

####Version 2.3.0:    
- Alphabetische Sortierung der Kategorienausgabe nach Nachname (bzw. bei Einrichtungen nach Bezeichnungsfeld) über Parameter sort="nachname"         
- Berücksichtigung der Felder "Nachname" und "Bezeichnung" bei Sortierung der Auswahlliste    
- Bugfix bei Anzeige des Raumes und des Bildes in der Sidebar über die Metabox "Ansprechpartner"    
- auf Kontaktseite ID der aktuellen Person in Kontexthilfe eingebunden    
- Einbindung von Sprechzeiten aus UnivIS    
- Neues Feld zur Eingabe einer Überschrift (Fettdruck) über den Sprechzeiten    
- Kompatibilität mit PHP7.1    

####Version 2.2.0:    
- Standard-Kontakt-Übersichtsseite kann mit einer eigens gestaltbaren Seite überschrieben werden, diese muss den Slug "person" haben        

####Version 2.1.20:    
- Einbindung der Übersichtsseite archive-person.php und archive-standort.php (je nach Bedarf in das eigene Theme zu kopieren und daran anzupassen)    

####Version 2.1.19:     
- Ergänzung von lecturetypen ES (Examensseminar), KS (Kombiseminar), MAS (Masterseminar), GS (Grundseminar), AS (Aufbauseminar)                 
- Issue #140: englische Ausgabe aus UnivIS (sofern vorhanden) für Organisation und Abteilung     
- Bugfix: fehlende Anzeige von verknüpften Kontakten in Sidebar     