@@ -22,6 +22,9 @@ Versionsänderungen:
 - <span class="fullname"> um den kompletten Namen ergänzt          
 - Kurzbeschreibung bei Sidebar-Format über verknüpfte Kontakte gesetzt     
 - Klassen ergänzt bei span1 (person-thumb), span3 mit Bild (person-default-thumb), span3 mit Mehrlink (person-default-more), span4 (person-default), span6 (person-compact-thumb), span7 (person-compact)    
+- bei Kategorienausgabe bei format="page" wird per default der Namen als Überschrift ausgegeben    
+- neuer Shortcode-Parameter: hide="rahmen" vergibt die zusätzliche Klasse noborder bei der Standardausgabe und bei format="kompakt"    
+
 
 
 ####Version 2.4.0:    
